@@ -3,6 +3,9 @@
  - (dtucker) [auth-passwd.c openbsd-compat/port-aix.c openbsd-compat/port-aix.h]
    Move AIX specific password authentication code to port-aix.c, call
    authenticate() until reenter flag is clear.
+ - (dtucker) [auth-sia.c configure.ac] Tru64 update from cmadams at hiwaay.net.
+   Use permanently_set_uid for SIA, only define DISABLE_FD_PASSING when SIA
+   is enabled, rely on SIA to check for locked accounts if enabled.  ok djm@
 
 20031121
  - (djm) OpenBSD CVS Sync
@@ -1504,4 +1507,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.3121 2003/11/22 03:16:56 dtucker Exp $
+$Id: ChangeLog,v 1.3122 2003/11/22 03:25:15 dtucker Exp $
